--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@icons-pack/react-simple-icons": "^4.6.1",
     "framer-motion": "^3.1.1",
     "next": "^10.2.3",
+    "node-font2base64": "^0.7.1",
+    "node-html-to-image": "^3.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
