--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^3.1.1",
     "next": "^10.2.3",
     "node-html-to-image": "^3.2.0",
+    "puppeteer-core": "^10.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -30,6 +31,8 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@next/bundle-analyzer": "^10.2.3",
     "@types/node": "^14.6.4",
+    "@types/puppeteer": "^5.4.4",
+    "@types/puppeteer-core": "^5.4.0",
     "@types/react": "^16.9.49",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
