--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@icons-pack/react-simple-icons": "^4.6.1",
+    "chrome-aws-lambda": "^10.1.0",
     "framer-motion": "^3.1.1",
     "next": "^10.2.3",
     "node-html-to-image": "^3.2.0",
-    "puppeteer-core": "^10.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -31,8 +31,6 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@next/bundle-analyzer": "^10.2.3",
     "@types/node": "^14.6.4",
-    "@types/puppeteer": "^5.4.4",
-    "@types/puppeteer-core": "^5.4.0",
     "@types/react": "^16.9.49",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
