--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "next": "^12.0.1",
     "node-html-to-image": "^3.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-github-buttons": "^0.5.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
