feat: add title background

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "super-og-images",
   "version": "0.0.1",
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 3001",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
