--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.1.0",
+    "@chakra-ui/system": "^1.1.0",
     "@chakra-ui/theme-tools": "^1.0.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@icons-pack/react-simple-icons": "^4.6.1",
-    "chrome-aws-lambda": "^10.1.0",
+    "@vercel/og": "^0.6.0",
     "framer-motion": "^3.1.1",
     "next": "^12.0.5",
-    "node-html-to-image": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
